--- a/robby.bib
+++ b/robby.bib
@@ -324,6 +324,14 @@
   issn = {1930-529X}
 }
 
+@unpublished{McKilliam_pps_unwrapping_tsp_2014,
+  author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
+  title = {Polynomial phase estimation by least squares phase unwrapping},
+  notes = {accepted to IEEE Trans. Signal Processing},
+  year = {2014},
+  month = {Jan.}
+}
+
 @article{McKilliam_arxiv_pps_unwrapping_2012,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
   title = {Polynomial phase estimation by phase unwrapping},
