added Andre's transcomms paper

--- a/bib.bib
+++ b/bib.bib
@@ -222,6 +222,15 @@ ISSN = {2073-8994},
 DOI = {10.3390/sym4040566}
 }
 
+@article{Bartlest_periodgram_point_process_1963,
+author={M. S. Bartlett}, 
+title={The Spectral Analysis of Point Processes},
+journal={J. Roy. Statist. Soc. B}, 
+volume=25, 
+number=2,
+pages={264-296}, 
+year=1963
+}
 
 @ARTICLE{Hernandez_rbf_phase_unwrapping_2009,
 title={Radial basis functions for phase unwrapping},
@@ -314,6 +323,75 @@ title={Software Defined Radio based Global Sensor Network Architecture},
 year=2014, 
 }
 
+@ARTICLE{Hosseini2013_crb_cpm, 
+author={Hosseini, E. and Perrins, E.}, 
+journal=ieeetcom,
+title={The {Cram\'er-Rao} Bound for Training Sequence Design for Burst-Mode {CPM}}, 
+year=2013, 
+month={June}, 
+volume=61, 
+number=6, 
+pages={2396-2407}, 
+keywords={Gaussian noise;mean square error methods;phase modulation;signal processing;AWGN channel;CPM signals;Cramer-Rao Bound;DA estimation scenario;UCRB;additive white Gaussian noise;burst mode CPM;carrier phase;closed form expression;continuous phase modulation;data aided estimation scenario;estimation parameters;frequency offset;mean square error;optimum training sequence;symbol timing;symbol timing estimation;training sequence design;unconditional CRB;Cramer-Rao bounds;continuous phase modulation;estimation theory;synchronization;training sequence design}, 
+doi={10.1109/TCOMM.2013.042313.120426}, 
+ISSN={0090-6778},}
+
+@INPROCEEDINGS{Hosseini_training_seq_design, 
+author={Hosseini, E. and Perrins, E.}, 
+booktitle={Global Communications Conference (GLOBECOM), 2012 IEEE}, 
+title={Training sequence design for data-aided synchronization of burst-mode CPM}, 
+year=2012, 
+month={Dec}, 
+pages={2234-2239}, 
+keywords={continuous phase modulation;parameter estimation;synchronisation;CPM signal;CRB;Cramér-Rao bound;burst-mode CPM;burst-mode transmission;carrier phase;continuous phase modulation signal;data-aided synchronization;frequency offset;optimum training sequence;parameter estimation;symbol timing;training sequence design}, 
+doi={10.1109/GLOCOM.2012.6503447}, 
+ISSN={1930-529X},}
+
+
+
+@ARTICLE{Tavares_training_seq_design_AM_2007, 
+author={Tavares, G. and Tavares, L.}, 
+journal=ieeetcom, 
+title={Sequence Design for Data-Aided Estimation of Synchronization Parameters}, 
+year=2007, 
+month={April}, 
+volume=55, 
+number=4, 
+pages={670-677}, 
+keywords={AWGN channels;modulation;synchronisation;Cramer-Rao lower bound;additive white Gaussian noise channel;carrier frequency offset;carrier phase;data-aided estimation;linearly modulated information signal;optimum data-sequence design;receiver synchronization;synchronization parameters;AWGN;Additive white noise;Communications Society;Frequency estimation;Frequency synchronization;Minimization methods;Parameter estimation;Phase estimation;Signal design;Timing;Cramér-Rao lower bound (CRLB);data-aided (DA) estimation;synchronization;training sequence design}, 
+doi={10.1109/TCOMM.2007.894091}, 
+ISSN={0090-6778},}
+
+@article{Haohuan2013435,
+title = "Fast approximate maximum likelihood period estimation from incomplete timing data ",
+journal = "Chinese Journal of Aeronautics ",
+volume = 26,
+number = 2,
+pages = "435 - 441",
+year = 2013,
+issn = "1000-9361",
+doi = "http://dx.doi.org/10.1016/j.cja.2013.02.021",
+url = "http://www.sciencedirect.com/science/article/pii/S1000936113000332",
+author = "Ye Haohuan and Liu Zheng and Jiang Wenli",
+keywords = "Grid search",
+keywords = "Maximum likelihood period estimation",
+keywords = "Periodic point process",
+keywords = "Periodogram",
+keywords = "Pulse repetition frequency "
+}
+
+
+@INPROCEEDINGS{5947313, 
+author={McPherson, S. and Ortega, A.}, 
+booktitle={Internat. Conf. Acoust. Spe. Sig. Process.}, 
+title={Detecting low-rate periodic events in Internet traffic using renewal theory}, 
+year=2011, 
+month={May}, 
+pages={4336-4339}, 
+keywords={Internet;computer network security;telecommunication traffic;Internet traffic;biological signals;computer networks;denial of-service attacks;discrete events;event arrival rates;frequency spectra;low-rate periodic event detection;multiple periodic anomalies;renewal theory;time-to-detection;Approximation methods;Frequency domain analysis;Harmonic analysis;Histograms;Internet;Probability;Timing;Detection Algorithm;Discrete Event Systems}, 
+doi={10.1109/ICASSP.2011.5947313}, 
+ISSN={1520-6149},}
+
 @INPROCEEDINGS{6510040, 
 author={Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.}, 
 booktitle={Communications Theory Workshop (AusCTW), 2013 Australian}, 
@@ -329,6 +407,21 @@ author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner a
 title = {Communication system and method}, 
 howpublished = {Provisional Patent: AU 2012904130},
 year=2013 
+}
+
+@article{Quinn_estimate_number_sinusoids_1989,
+author = {Quinn, B. G.},
+title = {ESTIMATING THE NUMBER OF TERMS IN A SINUSOIDAL REGRESSION},
+journal = {Journal of Time Series Analysis},
+volume = 10,
+number = 1,
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-9892},
+url = {http://dx.doi.org/10.1111/j.1467-9892.1989.tb00016.x},
+doi = {10.1111/j.1467-9892.1989.tb00016.x},
+pages = {71--75},
+keywords = {Sinusoid, periodicity, AIC, martingale},
+year = 1989,
 }
 
 @misc{McKilliam_asrp_phase_patent_2012, 
@@ -1477,6 +1570,14 @@ note={http://arxiv.org/abs/1108.2141},
 year=2011
 }
 
+@unpublished{Pollok_McKilliam_crb_cpm_2014,
+title={Modified {Cram\'er-Rao} bounds for continuous-phase modulated signals},
+author={A. Pollok and R. G. McKilliam},
+note={accepted to IEEE Transactions on Communications},
+year=2014
+}
+
+
 @incollection{Hotz_extr_int_circle_2013,
 year={2013},
 isbn={978-3-642-40019-3},
@@ -1555,6 +1656,15 @@ publisher=Springer,
   title = {The statistical theory of linear systems},
 publisher=Wiley, 
   year=1988
+}
+
+
+@book{Hannan_time_series_1967,
+  author = {E. J. Hannan},
+  title = {Time series analysis},
+series={Methuen's monographs on applied probability and statistics},
+publisher={Methuen}, 
+  year=1967
 }
 
 @ARTICLE{Morelli_symbtime_feedforward_1997, 
@@ -4448,10 +4558,10 @@ keywords={Monte Carlo methods;channel coding;code division multiple access;inter
 doi={10.1109/ICC.2012.6363913}, 
 ISSN={1550-3607},}
 
-@UNPUBLISHED{Quinn20013asilomar_period_est,
+@inproceedings{Quinn20013asilomar_period_est,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  booktitle = {Asilomar Conference on Signals, Systems, and Computers},
   year = 2013,
 }
 
@@ -4464,14 +4574,11 @@ pages = {65-70},
 month = {Feb.}
 }
 
-
 @ARTICLE{McKilliam2006,
   author = {R. G. McKilliam and G. Wyeth},
   title = {Fast and Robust Stereo Object Recognition for Spheres},
   journal = {Proc. Australasian Conference on Robotics and Automation},
-  year = {2006},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  year = 2006,
   url = {http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf}
 }
 
@@ -4484,8 +4591,6 @@ month = {Feb.}
   pages = {4378-4381},
   number = 9,
   month = {Sep.},
-  owner = {Robby},
-  timestamp = {2008.02.05},
   doi = {10.1109/TIT.2008.928280},
   issn = {0018-9448},
   url = {http://arxiv.org/abs/0801.1364}
@@ -5524,7 +5629,7 @@ year = 1980,
 @unpublished{McKilliam_pps_unwrapping_tsp_2014,
 author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
 title={Polynomial phase estimation by least squares phase unwrapping},
-notes={accepted to IEEE Trans. Signal Processing},
+notes={accepted to IEEE Transactions on Signal Processing},
 year={2014},
 month={Jan.}
 }
