--- a/robby.bib
+++ b/robby.bib
@@ -42,6 +42,13 @@
   year = 2013
 }
 
+@unpublished{Pollok_McKilliam_crb_cpm_2014,
+  title = {Modified {Cram\'er-Rao} bounds for continuous-phase modulated signals},
+  author = {A. Pollok and R. G. McKilliam},
+  note = {accepted to IEEE Transactions on Communications},
+  year = 2014
+}
+
 @article{McKilliam_Pollock_CRB_polyphase_2013,
   author = {R. McKilliam and A. Pollok},
   title = {On the {Cram\'{e}r–Rao} bound for polynomial phase signals},
@@ -206,10 +213,10 @@
   issn = {1550-3607}
 }
 
-@unpublished{Quinn20013asilomar_period_est,
+@inproceedings{Quinn20013asilomar_period_est,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  booktitle = {Asilomar Conference on Signals, Systems, and Computers},
   year = 2013
 }
 
@@ -226,9 +233,7 @@
   author = {R. G. McKilliam and G. Wyeth},
   title = {Fast and Robust Stereo Object Recognition for Spheres},
   journal = {Proc. Australasian Conference on Robotics and Automation},
-  year = {2006},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  year = 2006,
   url = {http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf}
 }
 
@@ -241,8 +246,6 @@
   pages = {4378-4381},
   number = 9,
   month = {Sep.},
-  owner = {Robby},
-  timestamp = {2008.02.05},
   doi = {10.1109/TIT.2008.928280},
   issn = {0018-9448},
   url = {http://arxiv.org/abs/0801.1364}
@@ -327,7 +330,7 @@
 @unpublished{McKilliam_pps_unwrapping_tsp_2014,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
   title = {Polynomial phase estimation by least squares phase unwrapping},
-  notes = {accepted to IEEE Trans. Signal Processing},
+  notes = {accepted to IEEE Transactions on Signal Processing},
   year = {2014},
   month = {Jan.}
 }
