--- a/bib.bib
+++ b/bib.bib
@@ -165,6 +165,17 @@ number=3,
 pages={825-830}
 }
 
+@article{dixon_beat_extraction_2001,
+author={S. Dixon},
+title={Automatic extraction of tempo and beat from expressive performances},
+journal={J. New Music Res.},
+volume=30,
+number=1,
+pages={39-58},
+year=2001,
+month={Mar.}
+}
+
 @incollection{book_sphere_free_number_theory_1990,
 year=1990,
 isbn={978-0-8176-3481-0},
@@ -222,6 +233,15 @@ ISSN = {2073-8994},
 DOI = {10.3390/sym4040566}
 }
 
+@article{Bartlest_periodgram_point_process_1963,
+author={M. S. Bartlett}, 
+title={The Spectral Analysis of Point Processes},
+journal={J. Roy. Statist. Soc. B}, 
+volume=25, 
+number=2,
+pages={264-296}, 
+year=1963
+}
 
 @ARTICLE{Hernandez_rbf_phase_unwrapping_2009,
 title={Radial basis functions for phase unwrapping},
@@ -241,17 +261,48 @@ number=2
   pages = {1951--1953},
   numpages = 0,
   year = 1984,
-  month = {Nov},
+  month = {Nov.},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.53.1951},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.53.1951}
 }
+
+@ARTICLE{5648749, 
+author={Ruey-Yi Wei and Chang-Chih Huang}, 
+journal=ieeetcom, 
+title={Noncoherently Non-Catastrophic Trellis Coded Modulation}, 
+year=2011, 
+month={Feb.}, 
+volume=59, 
+number=2, 
+pages={369-375}, 
+keywords={phase shift keying;quadrature amplitude modulation;trellis coded modulation;MPSK;QAM;TAPSK;differential encoder;noncoherent decoding;noncoherent detection;trellis coded modulation;Noncoherent detection;quadrature-amplitude modulation;trellis coded modulation}, 
+doi={10.1109/TCOMM.2010.111710.100015}, 
+ISSN={0090-6778},}
 
 @misc{ASRPpromovideo,
   title = {{The Global Sensor Network - University of South Australia}},
   howpublished = {\url{http://www.youtube.com/watch?v=m2-VBFL6dzM}},
   note = {{Published: 18 Jul 2013}}
 }
+
+    @article{CaseySadler_primes_2013,
+     title = {Pi, the Primes, Periodicities, and Probability},
+     author = {S. D. Casey and B. M. Sadler},
+     journal = {The American Mathematical Monthly},
+     volume = {120},
+     number = {7},
+     jstor_formatteddate = {August–September 2013},
+     pages = {594-608},
+     url = {http://www.jstor.org/stable/10.4169/amer.math.monthly.120.07.594},
+     ISSN = {00029890},
+     abstract = {Abstract The theory of numbers has repeatedly shown itself to be both practical and beautiful. This paper gives an example of this duality. We present a very efficient (and practical) algorithm for extracting the fundamental period from a set of sparse and noisy observations of a periodic process. The procedure is computationally straightforward, stable with respect to noise, and converges quickly. Its use is justified by a theorem, which shows that for a set of randomly chosen positive integers, the probability that they do not all share a common prime factor approaches one quickly as the cardinality of the set increases. The proof of this theorem rests on a (beautiful) probabilistic interpretation of the Riemann zeta function.},
+     language = {English},
+     year = {2013},
+     publisher = {Mathematical Association of America},
+     copyright = {Copyright © 2013 Mathematical Association of America},
+    }
+
 
 @article{Lu200762,
 title = "Weighted least-squares phase unwrapping algorithm based on derivative variance correlation map ",
@@ -269,6 +320,17 @@ keywords = "Phase unwrapping",
 keywords = "Weighted least-squares",
 keywords = "Quality map "
 }
+
+@INPROCEEDINGS{6622758, 
+author={Minhas, S.F. and Gaydecki, P.}, 
+booktitle={Digital Signal Processing (DSP), 2013 18th International Conference on}, 
+title={A non-iterative approach to frequency estimation of a complex exponential in noise by interpolation of fourier coefficients}, 
+year={2013}, 
+month={July}, 
+pages={1-6}, 
+keywords={Fourier transforms;frequency estimation;interpolation;nonlinear functions;signal processing;Cramer Rao-bound;Fourier coefficients;asymptotic variance;complex exponential;frequency estimation;interpolation;minimum variance;noniterative approach;nonlinear function;Algorithm design and analysis;Discrete Fourier transforms;Frequency estimation;Interpolation;Signal processing algorithms;Signal to noise ratio;Complex exponential;Frequency estimation;Interpolation of Fourier coefficients;Parameter estimation}, 
+doi={10.1109/ICDSP.2013.6622758}, 
+ISSN={1546-1874},}
 
 @ARTICLE{1459899, 
 author={S.B. Kim and Y.S. Kim}, 
@@ -314,6 +376,149 @@ title={Software Defined Radio based Global Sensor Network Architecture},
 year=2014, 
 }
 
+@ARTICLE{Hosseini2013_crb_cpm, 
+author={Hosseini, E. and Perrins, E.}, 
+journal=ieeetcom,
+title={The {Cram\'er-Rao} Bound for Training Sequence Design for Burst-Mode {CPM}}, 
+year=2013, 
+month={June}, 
+volume=61, 
+number=6, 
+pages={2396-2407}, 
+keywords={Gaussian noise;mean square error methods;phase modulation;signal processing;AWGN channel;CPM signals;Cramer-Rao Bound;DA estimation scenario;UCRB;additive white Gaussian noise;burst mode CPM;carrier phase;closed form expression;continuous phase modulation;data aided estimation scenario;estimation parameters;frequency offset;mean square error;optimum training sequence;symbol timing;symbol timing estimation;training sequence design;unconditional CRB;Cramer-Rao bounds;continuous phase modulation;estimation theory;synchronization;training sequence design}, 
+doi={10.1109/TCOMM.2013.042313.120426}, 
+ISSN={0090-6778},}
+
+@INPROCEEDINGS{Hosseini_training_seq_design, 
+author={Hosseini, E. and Perrins, E.}, 
+booktitle={Global Communications Conference (GLOBECOM), 2012 IEEE}, 
+title={Training sequence design for data-aided synchronization of burst-mode CPM}, 
+year=2012, 
+month={Dec}, 
+pages={2234-2239}, 
+keywords={continuous phase modulation;parameter estimation;synchronisation;CPM signal;CRB;Cramér-Rao bound;burst-mode CPM;burst-mode transmission;carrier phase;continuous phase modulation signal;data-aided synchronization;frequency offset;optimum training sequence;parameter estimation;symbol timing;training sequence design}, 
+doi={10.1109/GLOCOM.2012.6503447}, 
+ISSN={1930-529X},}
+
+
+
+@ARTICLE{Tavares_training_seq_design_AM_2007, 
+author={Tavares, G. and Tavares, L.}, 
+journal=ieeetcom, 
+title={Sequence Design for Data-Aided Estimation of Synchronization Parameters}, 
+year=2007, 
+month={April}, 
+volume=55, 
+number=4, 
+pages={670-677}, 
+keywords={AWGN channels;modulation;synchronisation;Cramer-Rao lower bound;additive white Gaussian noise channel;carrier frequency offset;carrier phase;data-aided estimation;linearly modulated information signal;optimum data-sequence design;receiver synchronization;synchronization parameters;AWGN;Additive white noise;Communications Society;Frequency estimation;Frequency synchronization;Minimization methods;Parameter estimation;Phase estimation;Signal design;Timing;Cramér-Rao lower bound (CRLB);data-aided (DA) estimation;synchronization;training sequence design}, 
+doi={10.1109/TCOMM.2007.894091}, 
+ISSN={0090-6778},}
+
+@INPROCEEDINGS{6492742, 
+author={H. Ye and Z. Liu and W. Jiang}, 
+booktitle={Internat. Conf. Automatic Control and Artificial Intelligence}, 
+title={Efficient maximum-likelihood period estimation from incomplete timing data}, 
+year=2012, 
+month={Mar.}, 
+pages={959-962}, 
+keywords={Period estimation;clock synchronization;frequency hop communication;pulse repetition interval}, 
+doi={10.1049/cp.2012.1135}
+}
+
+@article{Haohuan2013435,
+title = {Fast approximate maximum likelihood period estimation from incomplete timing data},
+journal = {Chinese Journal of Aeronautics},
+volume = 26,
+number = 2,
+pages = {435-441},
+year = 2013,
+doi = "http://dx.doi.org/10.1016/j.cja.2013.02.021",
+url = "http://www.sciencedirect.com/science/article/pii/S1000936113000332",
+author = "H. Ye and Z. Liu and W. Jiang"
+}
+
+@ARTICLE{5621928, 
+author={M. I. Stanciu and S. Azou and A. Şerbănescu}, 
+journal=ieeetsp, 
+title={On the Blind Estimation of Chip Time of Time-Hopping Signals Through Minimization of a Multimodal Cost Function}, 
+year=2011, 
+month={Feb}, 
+volume=59, 
+number=2, 
+pages={842-847}, 
+keywords={blind source separation;optimisation;time-of-arrival estimation;blind estimation;chip duration;chip time;computational complexity;global minimum;multimodal cost function minimization;multiple observation set;optimization algorithm;oscillatory behavior;statistical accuracy;time hopping signal;time-of-arrival folding;Artificial neural networks;Complexity theory;Cost function;Estimation;Jitter;Noise measurement;Oscillators;Blind estimation;chip duration;impulse radio;multimodal optimization;period estimation;pulse train analysis;time-hopping;time-of-arrival}, 
+doi={10.1109/TSP.2010.2090872}, 
+ISSN={1053-587X},}
+
+@INPROCEEDINGS{5947313, 
+author={McPherson, S. and Ortega, A.}, 
+booktitle={Internat. Conf. Acoust. Spe. Sig. Process.}, 
+title={Detecting low-rate periodic events in Internet traffic using renewal theory}, 
+year=2011, 
+month={May}, 
+pages={4336-4339}, 
+keywords={Internet;computer network security;telecommunication traffic;Internet traffic;biological signals;computer networks;denial of-service attacks;discrete events;event arrival rates;frequency spectra;low-rate periodic event detection;multiple periodic anomalies;renewal theory;time-to-detection;Approximation methods;Frequency domain analysis;Harmonic analysis;Histograms;Internet;Probability;Timing;Detection Algorithm;Discrete Event Systems}, 
+doi={10.1109/ICASSP.2011.5947313}, 
+ISSN={1520-6149},}
+
+@inproceedings{EltonGray_puilse_train_rader_1994,
+author={S. D. Elton and D. A. Gray}, 
+title={The application of circular statistics to speciﬁc radar pulse train detection}, 
+booktitle={EUSIPCO},
+year={1994}
+}
+
+@inproceedings{Gray_more_pri_1994,
+author={D. Gray and B. Slocumb and S. Elton}, 
+title={Parameter estimation for periodic discrete event processes}, 
+booktitle={Internat. Conf. Acoust. Spe. Sig. Process.},
+year=1994, 
+volume=4, 
+pages={93-96}
+}
+
+@article{Giannakis_est_pri_missing_obs_1994,
+authors={G. B. Giannakis and G. Zhou}, 
+title={Parameter estimation of cyclostationary {AM} time series with application to missing observations}, 
+journal={IEEE Trans. Signal Processing}, 
+volume=42, 
+pages={2408-2419}, 
+year=1994
+}
+
+
+
+@article{Rossoni200630,
+title = "A nonparametric approach to extract information from interspike interval data ",
+journal = "Journal of Neuroscience Methods ",
+volume = 150,
+number = 1,
+pages = "30 - 40",
+year = 2006,
+issn = "0165-0270",
+doi = "http://dx.doi.org/10.1016/j.jneumeth.2005.05.021",
+url = "http://www.sciencedirect.com/science/article/pii/S0165027005001913",
+author = "E. Rossoni and J. Feng",
+keywords = "Expectation-maximization (EM) algorithm",
+keywords = "Multielectrode",
+keywords = "Algorithm "
+}
+
+
+@ARTICLE{726812, 
+author={B. M. Sadler and S. D. Casey}, 
+journal=ieeetsp, 
+title={On periodic pulse interval analysis with outliers and missing observations}, 
+year=1998, 
+month={Nov.}, 
+volume=46, 
+number=11, 
+pages={2990-3002}, 
+keywords={Monte Carlo methods;estimation theory;noise;spectral analysis;statistical analysis;Cramer-Rao bound;Monte Carlo results;greatest common divisor;initialization;linear regression problems;missing observations;modified Euclidean algorithm;noise levels;noisy contaminated data set;outliers;period estimator;periodic pulse interval analysis;periodic pulse trains;periodogram approach;point process;three-step algorithm;time of arrival;Additive white noise;Data models;Gaussian noise;Linear regression;Maximum likelihood detection;Maximum likelihood estimation;Nervous system;Noise level;Noise robustness;Signal to noise ratio}, 
+doi={10.1109/78.726812}, 
+ISSN={1053-587X},}
+
 @INPROCEEDINGS{6510040, 
 author={Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.}, 
 booktitle={Communications Theory Workshop (AusCTW), 2013 Australian}, 
@@ -324,11 +529,35 @@ month={Jan.},
 keywords={Monte Carlo methods;code division multiple access;decoding;interference suppression;iterative methods;probability;radiofrequency interference;synchronisation;Monte-Carlo simulations;code division multiple access systems;data-aided scenario;decoder iterations;decoder-aided synchronization;frame synchronization;linear pre-processing;missed detection probability;multiple access interference mitigation;multiuser CDMA systems;nondata-aided scenario;partial interference cancellation;residual interference;soft information;time offset estimator;user signals}, 
 doi={10.1109/AusCTW.2013.6510040},}
 
+@article{Hauochan_pri_2012,
+title={Pulse Repetition Interval Estimation in Moving Passive Sensors Based on Observation Calibration},
+author={H. Ye and Z. Liu and W. Jiang},
+journal={Progress In Electromagnetics Research C}, 
+volume=28, 
+pages={257-270}, 
+year=2012
+}
+
 @misc{McKilliam_asrp_phase_2012, 
 author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis}, 
 title = {Communication system and method}, 
 howpublished = {Provisional Patent: AU 2012904130},
 year=2013 
+}
+
+@article{Quinn_estimate_number_sinusoids_1989,
+author = {Quinn, B. G.},
+title = {ESTIMATING THE NUMBER OF TERMS IN A SINUSOIDAL REGRESSION},
+journal = {Journal of Time Series Analysis},
+volume = 10,
+number = 1,
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-9892},
+url = {http://dx.doi.org/10.1111/j.1467-9892.1989.tb00016.x},
+doi = {10.1111/j.1467-9892.1989.tb00016.x},
+pages = {71--75},
+keywords = {Sinusoid, periodicity, AIC, martingale},
+year = 1989,
 }
 
 @misc{McKilliam_asrp_phase_patent_2012, 
@@ -922,6 +1151,40 @@ keywords={Doppler radar, kinematics, phase estimation, polynomials, radar signal
 doi={10.1109/78.839999},
 ISSN={1053-587X}, }
 
+@ARTICLE{490557, 
+author={I. V. L. Clarkson and J. E. Perkins and I. M. Y. Mareels}, 
+journal=ieeetit, 
+title={Number theoretic solutions to intercept time problems}, 
+year=1996, 
+month={May}, 
+volume=42, 
+number=3, 
+pages={959-971}, 
+keywords={approximation theory;convergence of numerical methods;number theory;probability;radar detection;radar receivers;recursive estimation;Farey points;arbitrary starting phases;coincidences;convergence;homogeneous Diophantine approximation problem;intercept probability;intercept time problems;number-theoretic solutions;overlaps;periodic pulse trains;pulse repetition interval ratio;radar warning receiver;random phases;recurrence equation;simple continued fraction expansion;Antenna measurements;Australia;Difference equations;Directional antennas;Helium;Particle measurements;Radar antennas;Radar equipment;Radar measurements;Time measurement}, 
+doi={10.1109/18.490557}, 
+ISSN={0018-9448},}
+
+@article{Brillinger_spike_trains_1988,
+author={D. R. Brillinger},
+title={Maximum likelihood analysis of spike trains of interacting
+nerve cells},
+journal={Biolog. Cybern.}, 
+volume=59, 
+number=3, 
+pages={189–200}, 
+year=1988
+}
+
+@inproceedings{clarkson_estimate_period_pulse_train_1996,
+author={I. V. L. Clarkson and S. D. Howard and I. M. Y. Mareels}, 
+title={Estimating the period of a pulse train from a set of sparse, noisy measurements},
+booktitle={Internat. Sympos. Signal Process. Appl.},
+volume=2, 
+pages={885-888}, 
+month={Aug.},
+year=1996
+} 
+
 @article{Angeby_estimating_2000,
 title = {Estimating signal parameters using the nonlinear instantaneous least squares approach},
 	volume = {48},
@@ -1477,6 +1740,14 @@ note={http://arxiv.org/abs/1108.2141},
 year=2011
 }
 
+@unpublished{Pollok_McKilliam_crb_cpm_2014,
+title={Modified {Cram\'er-Rao} bounds for continuous-phase modulated signals},
+author={A. Pollok and R. G. McKilliam},
+note={accepted to IEEE Transactions on Communications},
+year=2014
+}
+
+
 @incollection{Hotz_extr_int_circle_2013,
 year={2013},
 isbn={978-3-642-40019-3},
@@ -1555,6 +1826,15 @@ publisher=Springer,
   title = {The statistical theory of linear systems},
 publisher=Wiley, 
   year=1988
+}
+
+
+@book{Hannan_time_series_1967,
+  author = {E. J. Hannan},
+  title = {Time series analysis},
+series={Methuen's monographs on applied probability and statistics},
+publisher={Methuen}, 
+  year=1967
 }
 
 @ARTICLE{Morelli_symbtime_feedforward_1997, 
@@ -1842,7 +2122,7 @@ pages={246-248}
   volume = {103},
   pages = {742-755},
   number = {9},
-  month = {Nov},
+  month = {Nov.},
   owner = {Robby},
   timestamp = {2008.02.06}
 }
@@ -1931,8 +2211,7 @@ doi = {10.1007/BF00745933}
 
 @ARTICLE{Casey1995,
   author = {S. D. Casey and B. M. Sadler},
-  title = {A modified Euclidean algorithm for isolating periodicities from a
-	sparse set of noisy measurements},
+  title = {A modified {Euclidean} algorithm for isolating periodicities from a sparse set of noisy measurements},
   journal = {Proc. Internat. Conf. Acoust. Speech Signal Proces.},
   year = {1995},
   volume = {3},
@@ -2064,6 +2343,13 @@ volume=1021,
 pages={195–229}
 }
 
+@phdthesis{He_detecting_periodic_patterns_in_internet_2006,
+author={X. He}, 
+title={Detecting periodic patterns in internet traffic with spectral and statistical methods}, 
+school={University of Southern California}, 
+year=2006,
+} 
+
 @phdthesis{Brander_list_decoding_thesis, 
 author = {K. Brander}, 
 title = {Interpolation and List Decoding of Algebraic Codes},
@@ -2072,6 +2358,19 @@ month = {Jan.},
 school = {Technical University of Denmark,
 Department of Mathematics},
 } 
+
+@ARTICLE{5585849, 
+author={G. Thatte and U. Mitra and J. Heidemann}, 
+journal={IEEE/ACM Transactions on Networking}, 
+title={Parametric Methods for Anomaly Detection in Aggregate Traffic}, 
+year=2011, 
+month={Apr.}, 
+volume=19, 
+number=2, 
+pages={512-525}, 
+keywords={computer network security;statistical analysis;telecommunication traffic;Los Angeles;University of Southern California;aggregate traffic statistics;bit rate signal-to-noise ratio;bivariate parametric detection mechanism;campus network;denial-of-service attack;false positive rate;manual parameter tuning;network anomaly detection;packet size statistics;sequential probability ratio test;Aggregates;Computational modeling;Computer crime;Entropy;Feature extraction;Signal to noise ratio;Training;Aggregate traffic;anomaly detection;distributed denial of service (DDoS);parametric models}, 
+doi={10.1109/TNET.2010.2070845}, 
+ISSN={1063-6692},}
 
 @phdthesis{Robertson_frame_sync_phd_1995, 
 author = {P. Robertson}, 
@@ -2323,7 +2622,7 @@ title={A fast encoding method for lattice codes and quantizers},
 author={J. H. Conway and N. J. A. Sloane},
 journal= ieeetit,
 year={1983},
-month={Nov},
+month={Nov.},
 volume={29},
 number={6},
 pages={ 820-824},
@@ -3147,7 +3446,7 @@ keywords = "frequency estimation; phase unwrapping; least-squares."
   journal = {IEEE Global Commun. Conf.},
   year = {2005},
   volume = {5},
-  month = {Nov},
+  month = {Nov.},
   owner = {Robby},
   timestamp = {2007.08.01}
 }
@@ -3289,7 +3588,7 @@ title={Estimation and statistical analysis of exponential polynomial signals},
 author={S. Golden and B. Friedlander},
 journal=ieeetsp,
 year={1998},
-month={Nov},
+month={Nov.},
 volume={46},
 number={11},
 pages={3127-3130},
@@ -4448,10 +4747,10 @@ keywords={Monte Carlo methods;channel coding;code division multiple access;inter
 doi={10.1109/ICC.2012.6363913}, 
 ISSN={1550-3607},}
 
-@UNPUBLISHED{Quinn20013asilomar_period_est,
+@inproceedings{Quinn20013asilomar_period_est,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  booktitle = {Asilomar Conference on Signals, Systems, and Computers},
   year = 2013,
 }
 
@@ -4464,14 +4763,11 @@ pages = {65-70},
 month = {Feb.}
 }
 
-
 @ARTICLE{McKilliam2006,
   author = {R. G. McKilliam and G. Wyeth},
   title = {Fast and Robust Stereo Object Recognition for Spheres},
   journal = {Proc. Australasian Conference on Robotics and Automation},
-  year = {2006},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  year = 2006,
   url = {http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf}
 }
 
@@ -4484,8 +4780,6 @@ month = {Feb.}
   pages = {4378-4381},
   number = 9,
   month = {Sep.},
-  owner = {Robby},
-  timestamp = {2008.02.05},
   doi = {10.1109/TIT.2008.928280},
   issn = {0018-9448},
   url = {http://arxiv.org/abs/0801.1364}
@@ -4681,7 +4975,7 @@ title={Fast decoding of the hexagonal lattice with applications to power efficie
 author={W. H. Mow},
 journal={Singapore {ICCS/ISITA}},
 year={1992},
-month={Nov},
+month={Nov.},
 volume={},
 number={},
 pages={370-373},
@@ -5166,7 +5460,7 @@ pages={143-229},
   journal = {Asilomar Conference on Signals, Systems and Computers},
   year = {2007},
   pages = {587-591},
-  month = {Nov},
+  month = {Nov.},
   owner = {Robby},
   timestamp = {2007.11.21}
 }
@@ -5336,7 +5630,7 @@ ISSN={0018-9448}, }
   journal = {IEEE Global Commun. Conf.},
   year = {2006},
   pages = {1-5},
-  month = {November},
+  month = {Nov.},
   owner = {Robby},
   timestamp = {2008.02.15}
 }
@@ -5521,13 +5815,18 @@ year = 1980,
     file = {Yokoyama_moment_bound_stat_proc_1980.pdf}
     }
 
-@unpublished{McKilliam_pps_unwrapping_tsp_2014,
-author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
-title={Polynomial phase estimation by least squares phase unwrapping},
-notes={accepted to IEEE Trans. Signal Processing},
-year={2014},
-month={Jan.}
-}
+@ARTICLE{McKilliam_pps_unwrapping_tsp_2014, 
+author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi}, 
+journal=ieeetsp,
+title={Polynomial Phase Estimation by Least Squares Phase Unwrapping}, 
+year=2014, 
+month={April}, 
+volume=62, 
+number=8, 
+pages={1962-1975}, 
+keywords={Lattices;Least squares approximations;Phase estimation;Polynomials;Signal processing algorithms;Signal to noise ratio;Asymptotic properties;nearest lattice point problem;phase unwrapping;polynomial phase signals}, 
+doi={10.1109/TSP.2014.2306178}, 
+ISSN={1053-587X},}
 
     
 @article{McKilliam_arxiv_pps_unwrapping_2012,
@@ -5659,7 +5958,7 @@ pages = {303-317}
 @article{Suga_1975_bats_echolocation,
 author = {N. Suga and J. A. Simmons and P. H. Jen},
 year = 1975,
-title = {Peripheral specialization for fine analysis of Doppler-shifted echoes in the auditory system of the {CF-FM} bat {Pteronotus Parnellii}},
+title = {Peripheral specialization for fine analysis of {Doppler-shifted} echoes in the auditory system of the {CF-FM} bat {Pteronotus Parnellii}},
 journal = {Journal of Experimental Biology},
 volume = 63, 
 pages = {161-192}
@@ -5714,7 +6013,7 @@ author={G. J. G. Upton},
   volume = 31,
   pages = {832-835},
   number = 6,
-  month = {November},
+  month = {Nov.},
   owner = {Robby},
   timestamp = {2007.10.24}
 }
@@ -5874,7 +6173,7 @@ pages = {97-178}
 author = {F. Vallentin}, 
 title = {Sphere coverings, lattices, and tilings (in low dimensions)},
 year = 2003,
-month = {November},
+month = {Nov.},
 school = {Zentrum Mathematik, Technische Universit\"at M\"unchen}
 } 
 
@@ -5969,6 +6268,15 @@ school = {Zentrum Mathematik, Technische Universit\"at M\"unchen}
  address = {Amsterdam, The Netherlands, The Netherlands},
  keywords = {multiple symbol detection, phase estimation, reference symbols},
 } 
+
+@article{Arnett_neuro_pri_1976,
+author={D. W. Arnett and B. M. Ellert}, 
+title={A real-time cross correlator for neurophysiological research}, 
+journal={IEEE Trans. Biomed. Eng.}, 
+volume=23,
+pages={65-70}, 
+year=1976
+}
 
 @ARTICLE{ViterbiViterbi_phase_est_1983, 
 author={ Viterbi, A.}, 
