updated polyest paper

--- a/robby.bib
+++ b/robby.bib
@@ -327,12 +327,18 @@
   issn = {1930-529X}
 }
 
-@unpublished{McKilliam_pps_unwrapping_tsp_2014,
+@article{McKilliam_pps_unwrapping_tsp_2014,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
-  title = {Polynomial phase estimation by least squares phase unwrapping},
-  notes = {accepted to IEEE Transactions on Signal Processing},
-  year = {2014},
-  month = {Jan.}
+  journal = ieeetsp,
+  title = {Polynomial Phase Estimation by Least Squares Phase Unwrapping},
+  year = 2014,
+  month = {April},
+  volume = 62,
+  number = 8,
+  pages = {1962-1975},
+  keywords = {Lattices;Least squares approximations;Phase estimation;Polynomials;Signal processing algorithms;Signal to noise ratio;Asymptotic properties;nearest lattice point problem;phase unwrapping;polynomial phase signals},
+  doi = {10.1109/TSP.2014.2306178},
+  issn = {1053-587X}
 }
 
 @article{McKilliam_arxiv_pps_unwrapping_2012,
