--- a/bib.bib
+++ b/bib.bib
@@ -1171,7 +1171,7 @@ nerve cells},
 journal={Biolog. Cybern.}, 
 volume=59, 
 number=3, 
-pages={189–200}, 
+pages={189-200}, 
 year=1988
 }
 
@@ -4583,13 +4583,18 @@ year=2013,
 month={Jan.}
 }
 
-@unpublished{McKilliam_time_offset_pilots_data_2013,
-author={R. G. McKilliam and A. Pollok and B. Cowley},
-title={Simultaneous symbol timing and frame synchronization for phase shift keying},
-note={accepted to IEEE Transactions on Communications},
-year=2014,
-month={Jan.}
-}
+@ARTICLE{McKilliam_time_offset_pilots_data_2013, 
+author={R. G. McKilliam and A. Pollok and W. Cowley}, 
+journal=ieeetcom, 
+title={Simultaneous Symbol Timing and Frame Synchronization for Phase Shift Keying}, 
+year=2014, 
+month={Mar.}, 
+volume=62, 
+number=3, 
+pages={1114-1123}, 
+keywords={Complexity theory;Linear programming;Phase shift keying;Receivers;Signal to noise ratio;Synchronization;Synchronisation;phase shift keying}, 
+doi={10.1109/TCOMM.2014.020614.130277}, 
+ISSN={0090-6778},}
 
 @INPROCEEDINGS{McKilliam_leastsqPSKnoncoICASSP_2012,
 author={R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
@@ -4785,10 +4790,10 @@ month = {Feb.}
   url = {http://arxiv.org/abs/0801.1364}
 }
 
-@ARTICLE{McKilliam2008b,
+@inproceedings{McKilliam2008b,
   author = {R. G. McKilliam and I. V. L. Clarkson and W. D. Smith and B. G. Quinn},
   title = {A linear-time nearest point algorithm for the lattice ${A}_{n}^*$},
-  journal = {International Symposium on Information Theory
+  booktitle = {International Symposium on Information Theory
 	and its Applications},
 	month = {Dec.},
   year = 2008,
@@ -5465,10 +5470,10 @@ pages={143-229},
   timestamp = {2007.11.21}
 }
 
-@ARTICLE{Quinn2008maximizing_the_periodogram,
+@inproceedings{Quinn2008maximizing_the_periodogram,
 title={Maximizing the Periodogram},
 author={B. G. Quinn and R. G. McKilliam and I. V. L. Clarkson},
-journal={IEEE GLOBECOM},
+booktitle={IEEE Global Communications Conference},
 year={2008},
 month={Dec},
 pages={1-5},
@@ -6340,10 +6345,10 @@ number=2,
   timestamp = {2007.07.16}
 }
 
-@ARTICLE{Wilson1989,
+@inproceedings{Wilson1989,
   author = {S. G. Wilson and J. Freebersyser and C. Marshall},
   title = {Multi-symbol detection of {MPSK}},
-  journal = {Proc. IEEE GLOBECOM},
+  booktitle = {IEEE Global Communications Conference},
   year = 1989,
   pages = {1692-1697},
   month = {Nov.},
