--- a/robby.bib
+++ b/robby.bib
@@ -4,6 +4,8 @@
 
 @string{dasp = {Defence App. Sig. Proc.}}
 
+@string{ieeetcom = {IEEE Trans. Commun.}}
+
 @string{ieeetit = {IEEE Trans. Inform. Theory}}
 
 @string{ieeetsp = {IEEE Trans. Sig. Process.}}
@@ -80,12 +82,18 @@
   month = {Jan.}
 }
 
-@unpublished{McKilliam_time_offset_pilots_data_2013,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley},
-  title = {Simultaneous symbol timing and frame synchronization for phase shift keying},
-  note = {accepted to IEEE Transactions on Communications},
+@article{McKilliam_time_offset_pilots_data_2013,
+  author = {R. G. McKilliam and A. Pollok and W. Cowley},
+  journal = ieeetcom,
+  title = {Simultaneous Symbol Timing and Frame Synchronization for Phase Shift Keying},
   year = 2014,
-  month = {Jan.}
+  month = {Mar.},
+  volume = 62,
+  number = 3,
+  pages = {1114-1123},
+  keywords = {Complexity theory;Linear programming;Phase shift keying;Receivers;Signal to noise ratio;Synchronization;Synchronisation;phase shift keying},
+  doi = {10.1109/TCOMM.2014.020614.130277},
+  issn = {0090-6778}
 }
 
 @inproceedings{McKilliam_leastsqPSKnoncoICASSP_2012,
@@ -251,10 +259,10 @@
   url = {http://arxiv.org/abs/0801.1364}
 }
 
-@article{McKilliam2008b,
+@inproceedings{McKilliam2008b,
   author = {R. G. McKilliam and I. V. L. Clarkson and W. D. Smith and B. G. Quinn},
   title = {A linear-time nearest point algorithm for the lattice ${A}_{n}^*$},
-  journal = {International Symposium on Information Theory
+  booktitle = {International Symposium on Information Theory
 	and its Applications},
   month = {Dec.},
   year = 2008,
@@ -315,10 +323,10 @@
   issn = {1053-587X}
 }
 
-@article{Quinn2008maximizing_the_periodogram,
+@inproceedings{Quinn2008maximizing_the_periodogram,
   title = {Maximizing the Periodogram},
   author = {B. G. Quinn and R. G. McKilliam and I. V. L. Clarkson},
-  journal = {IEEE GLOBECOM},
+  booktitle = {IEEE Global Communications Conference},
   year = {2008},
   month = {Dec},
   pages = {1-5},
